[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "roop"
version = "1.3.2"
description = "one-click deepfake (face swap)"
authors = [
    { name = "Somdev Sangwan", email = "s0md3v@gmail.com" },
    { name = "Henry Ruhs" },
]
license = { file = "LICENSE" }
dependencies = [
    "numpy==1.24.3",
    "opencv-python==4.8.0.74",
    "onnx==1.14.0",
    "insightface==0.7.3",
    "psutil==5.9.5",
    "tensorflow==2.13.0",
    "opennsfw2==0.10.2",
    "protobuf==4.23.4",
    "tqdm==4.65.0",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]

[project.optional-dependencies]
coreml = ["onnxruntime-coreml==1.13.1"]
cpu = ["onnxruntime==1.15.0"]
cuda = ["onnxruntime-gpu==1.15.1"]
directml = ["onnxruntime-directml==1.15.1"]
openvino = ["onnxruntime-openvino==1.15.0"]
gfpgan = ["gfpgan==1.3.8"]
gui = [
    "customtkinter==5.2.0",
    "pillow==10.0.0",
    "tk==0.1.0",
    "tkinterdnd2==0.3.0; sys_platform != 'darwin' and platform_machine != 'arm64'",
    "tkinterdnd2-universal==1.7.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
silicon = ["onnxruntime-silicon==1.13.1"]

[project.urls]
Repository = "https://github.com/s0md3v/roop"
Documentation = "https://roop-ai.gitbook.io/roop"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = false
